fix statusbar buttons that takes up too much space

--- a/apps/studio/src/assets/styles/app/query-editor.scss
+++ b/apps/studio/src/assets/styles/app/query-editor.scss
@@ -112,6 +112,9 @@
   }
 
   .statusbar {
+    .statusbar-right-actions {
+      flex-basis: auto;
+    }
     .btn.btn-flat .material-icons {
       font-size: 16px;
     }
